Fix: Agregar installCommand en vercel.json para resolver error de Rollup

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-    "installCommand": "rm -rf node_modules && npm install",
+    "installCommand": "npm ci --legacy-peer-deps || npm install --legacy-peer-deps",
     "buildCommand": "npm run build"
 }
