--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-    "installCommand": "npm ci --legacy-peer-deps || npm install --legacy-peer-deps",
+    "installCommand": "npm install --legacy-peer-deps",
     "buildCommand": "npm run build"
 }
