--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "npm ci && npm run build"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
