--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.0.0",
     "mercadopago": "^2.0.0",
     "node-cache": "^5.1.2",
+    "node-telegram-bot-api": "^0.67.0",
     "ws": "^8.14.0"
   },
   "engines": {
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/node-telegram-bot-api": "^0.64.13",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
