--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
     "installCommand": "rm -rf node_modules && npm install --legacy-peer-deps",
-    "buildCommand": "npm run build"
+    "buildCommand": "npm run build",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ]
 }
