--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
