--- a/backend/package.json
+++ b/backend/package.json
@@ -23,18 +23,18 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.67.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "ws": "^8.14.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/node-cron": "^3.0.11",
-    "@types/node-telegram-bot-api": "^0.64.13",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "@types/node-telegram-bot-api": "^0.64.13"
   }
 }
