docs: add BIFROST_URL to env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,3 +30,5 @@ GOOGLE_ANALYTICS_ID=UA-XXXXXXXXX-X
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=60
+# Bifrost Proxy (Required for Geo-Blocked APIs)
+BIFROST_URL=https://criptodamus-bifrost.vercel.app
