--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "npm ci && npm run build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "axios": "^1.13.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
